# retailOS

./: .dockerignore  .env.example  .gitignore  .npmrc  .prettierignore  ARCHITECTURE.md  DATABASE.md  Dev Log.md  Dockerfile  Dockerfile.dev  MASTER_PROMPT.md  PHASE2_POS_PLAN.md  PHASE3_PURCHASING_PLAN.md  PHASE4_FINANCE_PLAN.md  PHASE5_INTELLIGENCE_PLAN.md  PHASE6_POLISH_LAUNCH_PLAN.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  retailos-performance-audit.md  tailwind.config.ts
.github/workflows/: ci.yml
ai-engine/: .dockerignore  Dockerfile  requirements.txt
ai-engine/app/: config.py  main.py
ai-engine/app/calendars/: dz_events.py
ai-engine/app/routers/: forecast.py
ai-engine/app/schemas/: forecast.py
ai-engine/app/services/: prophet_forecast.py  seasonality.py
design-system/retailos/: MASTER.md
desktop/scripts/: fetch-postgres.ps1  prepare-resources.mjs
desktop/scripts/bootstrap-sql/: 01-roles.sql
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  health.rs  lib.rs  logging.rs  main.rs  menu.rs  postgres.rs  server.rs  state.rs
docker/postgres/init/: 01-roles.sql
docs/: admin-guide.md  user-guide.md
prisma/: schema.prisma  seed.ts
scripts/: backup.sh  deploy.sh  restore.sh  simulate-month.ts
src/: instrumentation.ts  proxy.ts
src/app/: global-error.tsx  globals.css
src/components/: providers.tsx
src/config/: kpi-widgets.ts  nav.ts
src/hooks/: use-ai-notifications.ts  use-offline-sync.ts  use-online-status.ts  use-product-catalog-sync.ts
src/i18n/: ar.json  en.json  fr.json  request.ts  routing.ts
src/lib/: api-response.ts  auth.config.ts  auth.ts  categories.ts  constants.ts  currency.test.ts  currency.ts  edition.ts  email.ts  fetch-json.ts  fonts.ts  logger.ts  number-to-french-words.test.ts  number-to-french-words.ts  offline-db.ts  permission-catalog.ts  permissions.test.ts  permissions.ts  prisma.ts  product-cache-sync.ts  report-response.ts  rls.test.ts  service-errors.ts  storage.ts
src/stores/: ai-notifications.ts  pos-cart-store.ts
src/types/: next-auth.d.ts
(+416 files in other folders)
