[package]
name = "retailos-desktop"
version = "0.1.0"
edition = "2021"
publish = false
# Two [[bin]] targets exist (this crate's default src/main.rs, plus the
# task #9 bootstrap-test exerciser below) — tauri-cli can't guess which one
# is the app without this.
default-run = "retailos-desktop"

# Task #9 (bundled Postgres bootstrap) is built and tested here as a plain
# binary crate first — no `tauri` dependency yet. The Tauri shell (task
# #10) will depend on this same postgres module, not duplicate it.
[[bin]]
name = "bootstrap-test"
path = "src/bin/bootstrap_test.rs"

[dependencies]
anyhow = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
ureq = { version = "3.3.0", features = ["json"] }

[lib]
name = "retailos_desktop"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
